--- a/style.css
+++ b/style.css
@@ -2,4 +2,13 @@
     width: 1000px;
     height: 700px;
     background: greenyellow;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.box-up{
+    width: 300px;
+    height: 200px;
+    background: red;
+    z-index: 1;
 }
